fixed text align center for select tag

--- a/villa_booking/static/styles/home.css
+++ b/villa_booking/static/styles/home.css
@@ -193,6 +193,7 @@ header .main_container {
 
 #villa_type {
     text-align: center;
+    text-align-last: center;
     padding: 10px 0;
 }
 
